<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:id="@+id/map_view"
        android:title="@string/map"
        android:icon="@drawable/ic_map_black_24dp"/>
    <item android:id="@+id/restaurant_list_view"
        android:title="@string/list"
        android:icon="@drawable/ic_list_black_24dp"/>
    <item android:id="@+id/workmates_view"
        android:title="@string/workmates"
        android:icon="@drawable/ic_people_black_24dp"/>

</menu>