...
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_view_workmate_favorites"
                tools:listitem="@layout/workmates_restaurant_preview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:borderWidth="0dp"
        android:theme="@style/MyFAB"
        app:layout_anchor="@id/nested_scroll_view"
...
